Rendering: Alpha Channel is Broken. #40903

Closed
opened 2014-07-01 15:26:54 +02:00 by paul geraskin · 14 comments
Member

System Information
Linux 64bit, nVidia gtx 256

Blender Version
2.71 2e840e5 (dayly build)

Short description of error
Alpha channel is broken! It should be fully White!

Image: http://i.imgur.com/HcNHHfQ.png
File: https://dl.dropboxusercontent.com/u/26887202/blender/test_alpha_Broken_01.blend

Alpha is broken in Cycles and in Internal renderers.

Exact steps for others to reproduce the error
Render.

PS: Please check if internal re

**System Information** Linux 64bit, nVidia gtx 256 **Blender Version** 2.71 2e840e5 (dayly build) **Short description of error** Alpha channel is broken! It should be fully White! Image: http://i.imgur.com/HcNHHfQ.png File: https://dl.dropboxusercontent.com/u/26887202/blender/test_alpha_Broken_01.blend Alpha is broken in Cycles and in Internal renderers. **Exact steps for others to reproduce the error** Render. PS: Please check if internal re
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @PaulGeraskin

Added subscriber: @PaulGeraskin

Added subscriber: @mike91

Added subscriber: @mike91

Oh, I got the same problem!! I'm new to Blender and I realized lately that when I save PNG as RGBA it does not preserve Alpha channel properly. Glad I'm not alone in this :)

Oh, I got the same problem!! I'm new to Blender and I realized lately that when I save PNG as RGBA it does not preserve Alpha channel properly. Glad I'm not alone in this :)

Added subscriber: @zeauro

Added subscriber: @zeauro

Blender 2.71 ubuntu14.04 64bits

I confirm that there is a problem.

WrongAlphaComposite.blend

Render image in this .blend.

Composite node have a problem. When something is plugged in alpha channel, it modifies combined result.
When alpha socket from renderlayer is plugged into alpha socket of Composite node: it modifies alpha result instead of displaying same result than with no plugged.

Blender 2.71 ubuntu14.04 64bits I confirm that there is a problem. [WrongAlphaComposite.blend](https://archive.blender.org/developer/F96198/WrongAlphaComposite.blend) Render image in this .blend. Composite node have a problem. When something is plugged in alpha channel, it modifies combined result. When alpha socket from renderlayer is plugged into alpha socket of Composite node: it modifies alpha result instead of displaying same result than with no plugged.

Sorry , I forgot the hash : 61e5f81. There is no problem in official 2.71.

Sorry , I forgot the hash : 61e5f81. There is no problem in official 2.71.

Added subscriber: @AditiaA.Pratama

Added subscriber: @AditiaA.Pratama

I've tested the wrongAlphaComposite.blend in latest master and crash, here's the debug log http://www.pasteall.org/52560

along with crash.txt tested in ubuntu 14.04 64bit.
WrongAlphaComposite.crash.txt

I've tested the wrongAlphaComposite.blend in latest master and crash, here's the debug log http://www.pasteall.org/52560 along with crash.txt tested in ubuntu 14.04 64bit. [WrongAlphaComposite.crash.txt](https://archive.blender.org/developer/F96202/WrongAlphaComposite.crash.txt)
Lukas Tönne self-assigned this 2014-07-01 17:30:49 +02:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Caused by this commit it seems (git bisect):
ca8d8f5e52

Caused by this commit it seems (git bisect): ca8d8f5e52

This issue was referenced by ecc2e298e8

This issue was referenced by ecc2e298e8799c568840ead430264304cfc47250

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ecc2e298e8.

Closed by commit ecc2e298e8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40903
No description provided.