Fix T40903: Rendering: Alpha Channel is Broken